changed some comments about tuning properties

--- a/notebooks/place_cell_analysis.ipynb
+++ b/notebooks/place_cell_analysis.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -636,7 +636,7 @@
       "metadata": {
         "id": "IQLal_dnbY6M"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -706,7 +706,7 @@
         "id": "ogw6Tu0oLdop",
         "outputId": "dfe625d5-0849-4b27-ff6e-011cc05d0350"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,7 +758,7 @@
         "id": "sCjTsxz2gK0H",
         "outputId": "a9dfa60b-5a1e-43e6-fd5c-2cd3afe57e4f"
       },
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -860,7 +860,7 @@
         "id": "tUzxSE9i9_3L",
         "outputId": "8f0a521a-a70d-4103-bf2f-46ab8a56aa60"
       },
-      "execution_count": 162,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -949,7 +949,7 @@
       "metadata": {
         "id": "IDWTd_gukDQb"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -957,7 +957,9 @@
       "source": [
         "#Let's compare the speed and position tuning of single cells:\n",
         "\n",
-        "Investigate the cells by changin their indices with the slider. Many cells that are place tuned also show significant speed tuning. In these cases -do you think it is rather a place cell, a speed cell, or a cell tuned by both behavioural parameters? Keep in mind that we also have even more behavioural parameters that cells could code for, such as reward, licking etc and that neurons might not neccessarily code for one variable only but jointly for multiple ones.\n",
+        "Investigate the cells by changin their indices with the slider. Many cells that are place tuned also show significant speed tuning. In these cases -do you think it is rather a place cell, a speed cell, or a cell tuned by both behavioural parameters?\n",
+        "\n",
+        "Keep in mind that we also have even more behavioural parameters that cells could code for, such as reward, licking etc and that neurons might not neccessarily code for one variable only but jointly for multiple ones, since the hippocampus was found to encode not only space information but also other behavioural and abstract task relevant variables (see e.g. Nieh et al. 2021).\n",
         "\n",
         "One way to deal with this is by using tools such as Generalized Linear Models. Such tools inherently regresses out the effects of one included predictor variable (e.g. velocity) from the neuron's activity and allow to examine the residuals to determine whether there is any predictive power remaining with a specific second variable (e.g. position). However note that in cases where there is a very high colinearity between variables, statistically even more advanced methods will be needed.\n",
         "\n",
@@ -1038,7 +1040,7 @@
         "id": "crj2mQuE5Bix",
         "outputId": "4904b5d4-be3f-4302-f97a-fb3fece6eaf9"
       },
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1167,7 +1169,7 @@
         "id": "J9IF3F6SSWPY",
         "outputId": "cb8b7256-fc7f-4d1d-e225-bf0abf592fbe"
       },
-      "execution_count": 213,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1255,7 +1257,7 @@
         "id": "TOroOX2fZKSV",
         "outputId": "6846291d-5a3e-4903-9ec4-b77a73abac07"
       },
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1315,7 +1317,7 @@
         "id": "kmjXzGOMHNff",
         "outputId": "c0af3fb7-2d39-4059-a5cf-891a8eafc94b"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1343,7 +1345,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7Zl0E1XukSWVlAZK/1Ccg",
+      "authorship_tag": "ABX9TyNZLFaEs1kQqyYb7d2Xv2Au",
       "include_colab_link": true
     },
     "kernelspec": {
