--- a/notebooks/DeepLabCut_LindoScope_Colab_VideoAnalysis.ipynb
+++ b/notebooks/DeepLabCut_LindoScope_Colab_VideoAnalysis.ipynb
@@ -74,14 +74,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "KS4Q4UkR9rgG"
+        "id": "KS4Q4UkR9rgG",
+        "outputId": "7474ac5e-7622-4169-db61-8c050763f912",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Lets be sure you have access to the drive! You may need to mount this to add a link in your \"My Drive\" directory.\n",
+        "# you should see the DLC_models directory:\n",
+        "%cd /content/drive/MyDrive/LINdoscope2023_analysis\n",
+        "%ls"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pU1gChUkG-qp",
+        "outputId": "bbd000f3-42e7-4c55-9a68-b115743f689b"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/.shortcut-targets-by-id/1MCbA_XWnvaUo_aH2Nu4A3Sg_UwDbwAia/LINdoscope2023_analysis\n",
+            "\u001b[0m\u001b[01;34mDLC_models\u001b[0m/  \u001b[01;34mdocs\u001b[0m/  README.txt  \u001b[01;34msample_data\u001b[0m/  \u001b[01;34mstudent_data\u001b[0m/\n"
+          ]
+        }
       ]
     },
     {
@@ -95,23 +134,24 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "%cd /content/drive/MyDrive/LINdoscope2023_analysis\n",
-        "%ls"
+      "execution_count": 3,
+      "metadata": {
+        "id": "3K9Ndy1beyfG",
+        "outputId": "d2fb0b20-ac58-43f2-e385-9fa4054bcf72",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Loading DLC 2.3.5...\n",
+            "DLC loaded in light mode; you cannot use any GUI (labeling, relabeling and standalone GUI)\n"
+          ]
+        }
       ],
-      "metadata": {
-        "id": "pU1gChUkG-qp"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "3K9Ndy1beyfG"
-      },
-      "outputs": [],
       "source": [
         "import matplotlib\n",
         "import os\n",
@@ -133,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "vhENAlQnFENJ"
       },
@@ -143,9 +183,8 @@
         "PretrainedModelFolderName = 'MouseBody-Barnstedt-2019-09-09'\n",
         "\n",
         "# What is the video you want to first test?\n",
-        "\n",
-        "videofile_path = '/content/drive/My Drive/LINdoscope2023_analysis/sample_data/DeepLabCut/demoVideo.mp4'\n",
-        "length = 30 # desired length in seconds!\n",
+        "videofile_path = '/content/drive/My Drive/LINdoscope2023_analysis/sample_data/2P_dCA1_treadmill/Basler acA780-75gm (22611479)_20190218_151620616.mp4'\n",
+        "length = 30 # desired length in seconds\n",
         "\n",
         "# Edit these if needed\n",
         "framerate = 75\n",
@@ -158,19 +197,38 @@
       "source": [
         "# the Project/model config file:\n",
         "\n",
-        "path_config_file = '/content/drive/MyDrive/LINdoscope2023_analysis/sample_data/DeepLabCut/config.yaml'\n",
+        "path_config_file = '/content/drive/My Drive/LINdoscope2023_analysis/DLC_models/'+PretrainedModelFolderName+'/config.yaml'\n",
         "path_config_file"
       ],
       "metadata": {
-        "id": "vpwees4QJkKc"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "vpwees4QJkKc",
+        "outputId": "c2817b6b-67be-432f-cad3-168bcd7f0f58"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/drive/My Drive/LINdoscope2023_analysis/DLC_models/MouseBody-Barnstedt-2019-09-09/config.yaml'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Optional: shorten video for speed\n",
+        "## 🚨 Optional: shorten video for speed\n",
         "\n",
         "- Here, we preload a video of a mouse on the 2P system.\n"
       ],
@@ -181,10 +239,22 @@
     {
       "cell_type": "code",
       "source": [
-        "deeplabcut.ShortenVideo(videofile_path)?"
+        "# First, a 💡 ProTip:for every function you can use \"?\" to learn more!\n",
+        "deeplabcut.ShortenVideo?"
       ],
       "metadata": {
         "id": "EjF581V-OAEh"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "deeplabcut.ShortenVideo(videofile_path, start = \"00:00:00\", stop = \"00:00:10\", outsuffix = \"_short\")"
+      ],
+      "metadata": {
+        "id": "bmlbV_mrDixz"
       },
       "execution_count": null,
       "outputs": []
@@ -250,7 +320,6 @@
       },
       "outputs": [],
       "source": [
-        "import matplotlib\n",
         "deeplabcut.plot_trajectories(path_config_file, videofile_path, videotype=VideoType, shuffle=1, filtered=True)"
       ]
     },
