--- a/notebooks/DeepLabCut_LindoScope_Colab_VideoAnalysis.ipynb
+++ b/notebooks/DeepLabCut_LindoScope_Colab_VideoAnalysis.ipynb
@@ -43,8 +43,8 @@
       "cell_type": "code",
       "source": [
         "#(this will take a few minutes to install all the dependences!)\n",
-        "!pip install deeplabcut\n",
-        "!pip install tensorflow==2.10"
+        "!pip install deeplabcut[tf]\n",
+        "!pip install tensorflow==2.10 # just to be sure"
       ],
       "metadata": {
         "id": "vLztNBNphoiN"
