Video trimming fixed

--- a/notebooks/DeepLabCut_LindoScope_Colab_VideoAnalysis.ipynb
+++ b/notebooks/DeepLabCut_LindoScope_Colab_VideoAnalysis.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MMathisLab/LINdoscope2023/blob/main/notebooks/DeepLabCut_LindoScope_Colab_VideoAnalysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/obarnstedt/LINdoscope2023/blob/main/notebooks/DeepLabCut_LindoScope_Colab_VideoAnalysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -146,7 +146,7 @@
         "PretrainedModelFolderName = 'MouseBody-Barnstedt-2019-09-09'\n",
         "\n",
         "# What is the video you want to first test?\n",
-        "videofile_path = '/content/drive/My Drive/LINdoscope2023_analysis/sample_data/2P_dCA1_treadmill/Basler acA780-75gm (22611479)_20190218_151620616.mp4'\n",
+        "videofile_path = '/content/drive/MyDrive/LINdoscope2023_analysis/sample_data/2P_dCA1_treadmill/Basler_acA780-75gm_22611477_20190218_151617709.mp4'\n",
         "length = 30 # desired length in seconds\n",
         "\n",
         "# Edit these if needed\n",
@@ -195,7 +195,7 @@
     {
       "cell_type": "code",
       "source": [
-        "deeplabcut.ShortenVideo(videofile_path, start = \"00:00:00\", stop = \"00:00:10\", outsuffix = \"_short\", outpath='/content/')\n"
+        "deeplabcut.ShortenVideo(videofile_path, start = '00:00:00', stop = '00:00:10', outsuffix = \"_short\", outpath='/content/')\n"
       ],
       "metadata": {
         "id": "bmlbV_mrDixz"
@@ -206,7 +206,7 @@
     {
       "cell_type": "code",
       "source": [
-        "video_path_file_short = '/content/drive/My Drive/LINdoscope2023_analysis/sample_data/2P_dCA1_treadmill/Basler acA780-75gm (22611479)_20190218_151620616_short.mp4'\n",
+        "video_path_file_short = '/content/Basler_acA780-75gm_22611479_20190218_151620616_short.mp4'\n",
         "video_path_file_short\n"
       ],
       "metadata": {
@@ -340,7 +340,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "V100",
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
