fixed video trimming

--- a/notebooks/DeepLabCut_LindoScope_Colab_VideoAnalysis.ipynb
+++ b/notebooks/DeepLabCut_LindoScope_Colab_VideoAnalysis.ipynb
@@ -26,7 +26,7 @@
         "\n",
         "\n",
         "This notebook illustrates how to use DeepLabCut and Colab to:\n",
-        "- load a pretrained model from the Lindoscope Setting\n",
+        "- load a pretrained model from the LINdoscope Setting\n",
         "- analyze videos, filter data, create video w/keypoints\n"
       ]
     },
@@ -58,7 +58,7 @@
         "id": "25wSj6TlVclR"
       },
       "source": [
-        "**(Be sure to click \"RESTART RUNTIME\" if it is displayed above above before moving on !)**"
+        "**(Be sure to click \"RESTART RUNTIME\" if it is displayed above before moving on !)**"
       ]
     },
     {
@@ -195,22 +195,11 @@
     {
       "cell_type": "code",
       "source": [
-        "deeplabcut.ShortenVideo(videofile_path, start = '00:00:00', stop = '00:00:10', outsuffix = \"_short\", outpath='/content/')\n"
+        "video_path_file_short = deeplabcut.ShortenVideo(videofile_path, start = '00:00:00', stop = '00:00:10', outsuffix = \"_short\", outpath='/content/')\n",
+        "video_path_file_short"
       ],
       "metadata": {
         "id": "bmlbV_mrDixz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "video_path_file_short = '/content/Basler_acA780-75gm_22611479_20190218_151620616_short.mp4'\n",
-        "video_path_file_short\n"
-      ],
-      "metadata": {
-        "id": "CqKfoByNVp6S"
       },
       "execution_count": null,
       "outputs": []
@@ -322,7 +311,7 @@
       },
       "source": [
         "## Create labeled video\n",
-        "This funtion is for visualiztion purpose and can be used to create a video in .mp4 format with labels predicted by the network. This video is saved in the same directory where the original video resides."
+        "This function is for visualization purpose and can be used to create a video in .mp4 format with labels predicted by the network. This video is saved in the same directory where the original video resides."
       ]
     },
     {
