Video display added

--- a/notebooks/DeepLabCut_LindoScope_Colab_VideoAnalysis.ipynb
+++ b/notebooks/DeepLabCut_LindoScope_Colab_VideoAnalysis.ipynb
@@ -118,7 +118,9 @@
       "source": [
         "import matplotlib\n",
         "import os\n",
-        "import deeplabcut"
+        "import deeplabcut\n",
+        "from base64 import b64encode\n",
+        "from IPython.display import HTML"
       ]
     },
     {
@@ -234,7 +236,7 @@
         "\n",
         "batchsize = 128 #as large as your GPU can handle\n",
         "shuffle = 1 #typically default is 1.\n",
-        "video_to_use = videofile_path # or consider shorter video\n",
+        "video_to_use = video_path_file_short # or consider shorter video\n",
         "save_as_csv = False #which is the default; I really recommend becoming friends with H5 files 🤗"
       ],
       "metadata": {
@@ -322,8 +324,34 @@
       },
       "outputs": [],
       "source": [
-        "deeplabcut.create_labeled_video(path_config_file, video_to_use, videotype=VideoType, shuffle=shuffle, filtered=True)"
+        "deeplabcut.create_labeled_video(path_config_file, video_to_use, videotype=VideoType, shuffle=shuffle, filtered=True, fastmode=False)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mp4 = open('/content/Basler_acA780-75gm_22611477_20190218_151617709_shortDLC_resnet50_MouseBodySep9shuffle1_1030000_filtered_labeled.mp4','rb').read()\n",
+        "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
+        "HTML(\"\"\"\n",
+        "<video width=400 controls>\n",
+        "      <source src=\"%s\" type=\"video/mp4\">\n",
+        "</video>\n",
+        "\"\"\" % data_url)"
+      ],
+      "metadata": {
+        "id": "iRZBe4AEaiJ8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LPZ020Aud-Z6"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
